--- a/com.brettterpstra.sidecar.jacket/index.css
+++ b/com.brettterpstra.sidecar.jacket/index.css
@@ -204,7 +204,6 @@ body
 	-webkit-filter: blur(40px);
 	-webkit-transition: all .2s ease-in-out;
 	bottom: -40px;
-
 }
 .paused.fadeaway .progress span {
 	opacity: 1;
@@ -217,3 +216,27 @@ body
 }
 .fadeaway .jacket .title { font-weight: 300; -webkit-filter: drop-shadow(1px 2px 2px rgba(0,0,0,.5));}
 .fadeaway .jacket > p { color: #fff; opacity: .5;  }
+
+.fuzz {
+	background-color: rgba(0,0,0,.1);
+	/*background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(197, 13, 124)), to(rgb(23, 0, 14)));*/
+}
+.fuzz .progress span {
+	background: rgba(255,255,255,.6);
+	-webkit-filter: blur(20px);
+	-webkit-transition: all .2s ease-in-out;
+	bottom: -20px;
+}
+.paused.fuzz .progress span {
+	opacity: .85;
+	-webkit-filter: blur(19px) opacity(95%);
+}
+
+.fuzz .jacket .artist {
+	background: rgba(0,0,0, .1);
+	-webkit-filter: drop-shadow(1px 4px 2px rgba(0,0,0,.2));
+	color: rgba(255,255,255,0);
+	text-shadow: 1px 1px 2px #fff, -1px 1px 40px #000;
+}
+.fuzz .jacket .title { font-weight: 300; -webkit-filter: drop-shadow(1px 2px 1px rgba(0,0,0,.2));}
+.fuzz .jacket > p { color: #fff; opacity: .5;  }
