--- a/com.brettterpstra.sidecar.jacket/index.css
+++ b/com.brettterpstra.sidecar.jacket/index.css
@@ -11,6 +11,8 @@ html, body
 }
 
 body {
+	width: 100vw;
+	height: 100vh;
 	background: rgba(14, 13, 16, .15);
 }
 
@@ -18,7 +20,7 @@ body {
 
 body
 {
-	opacity: 0;
+	opacity: 1; /* FIX set back to 0 */
 	color: #fff;
 }
 
@@ -26,8 +28,8 @@ body
 
 .progress
 {
-	margin:0;
-	padding:0;
+	margin: 0;
+	padding: 0;
 	width: 100%;
 	height: 100%;
 	position: absolute;
@@ -35,7 +37,7 @@ body
 	bottom: 0;
 	right: 0;
 	top: 0;
-	z-index:0;
+	z-index: 0; /* FIX set back to 0 */
 }
 
 .progress span
@@ -51,8 +53,8 @@ body
 	text-align: center;
 	color: white;
 	-webkit-transform: translate3d(0, 0, 0);
-	-webkit-transition:all 1.1s linear;
-	transition:all 1.1s linear;
+	-webkit-transition: all 1.1s linear;
+	transition: all 1.1s linear;
 }
 
 .paused .progress span {
@@ -74,71 +76,76 @@ body
 
 .jacket
 {
-	position:absolute;
-	z-index: 10;
-	width: 298px;
-	height: 1416px;
+	position: absolute;
+	height: 100vh;
+	width: 100vw;
 	background: transparent;
 	overflow: visible;
 }
 
 .jacket > p
 {
-	font-family: "Helvetica Neue";
-	font-weight: 600;
-	font-size: 40px;
-	text-align: left;
-	display:block;
-	width: 1418px;
-	color: rgba(255,255,255,.5);
-	white-space: pre;
-	overflow: visible;
-	text-overflow: ellipsis;
-	position: absolute;
-	bottom:490px;
-	left:-315px;
 	-webkit-transform: rotate(-90deg);
 	-webkit-transition: all .5s linear;
+	left: 0;
+	display: block;
+	font-family: "Helvetica Neue";
+	font-size: 40px;
+	font-weight: 600;
+	overflow: visible;
+	position: absolute;
+	text-align: left;
+	text-overflow: ellipsis;
+	white-space: pre;
+	margin: 0;
+	padding: 0;
 }
 
 .jacket p > strong, .jacket p > span {
-	max-width: 50%;
 	white-space: pre;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	line-height: 1;
+	padding: 85vw 2vw 5vw 0;
+	display: block;
+	position: absolute;
+	margin: 0;
+	bottom: 0;
+	text-indent: 2vh;
+	/*height: 70vw;*/
 }
 
 .jacket .artist
 {
 	background: rgba(53, 51, 47, .35);
-	display: block;
-	float: left;
-	padding: 250px 5px 10px 30px;
-	position:relative;
-	top: -250px;
+	width: 40vh;
+	text-align: left;
 }
 
 .jacket .title
 {
-	font-weight: 100;
+    font-weight: 100;
+    width: 60vh;
+    right: 0;
 }
 
 #message {
-	text-transform: lowercase;
-	display: block;
-	width: 100%;
-	position: fixed;
-	top: 0;
+	-webkit-filter: blur(0);
+	-webkit-transform: scale(1);
 	color: white;
+	display: block;
 	font-family: "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 45px;
 	font-weight: bold;
-	text-align: center;
 	opacity: .3;
-	/*-webkit-transform: scale(1);*/
-	-webkit-filter: blur(0);
-	-webkit-transition: 0;
+	position: fixed;
+	text-align: center;
 	text-shadow: 0 0 8px #fff;
+	text-transform: lowercase;
+	top: 0;
+	width: 100vw;
+	z-index: 1000;
+	-webkit-transition: all .5s ease-in;
 }
 
 #message.show {
@@ -146,7 +153,7 @@ body
 	opacity: 0;
 	/*-webkit-transform: scale(1.4);*/
 	-webkit-filter: blur(10px);
-	-webkit-transition: all 1s ease-in;
+	-webkit-transition: all .5s ease-in;
 	text-shadow: 0 -28px 12px #fff, 0 -48px 12px #fff, 0 -68px 12px #fff;
 }
 
